# ChangeLog for app-text/docbook-sgml-dtd
# Copyright 2002-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/app-text/cvs-repo/gentoo-x86/app-text/docbook-sgml-dtd/ChangeLog,v 1.13 2003/11/15 02:54:42 agriffis Exp $

  14 Nov 2003; Aron Griffis <agriffis@gentoo.org>
  docbook-sgml-dtd-3.0-r1.ebuild:
  Stable on ia64

*docbook-sgml-dtd-4.2 (09 Feb 2003)

  23 Jul 2003; Guy Martin <gmsoft@gentoo.org> docbook-sgml-dtd-4.2.ebuild :
  Marked stable on hppa. 

  09 Feb 2003; Matthew Turk <satai@gentoo.org> : 
  Version bump, slotted properly.

*docbook-sgml-dtd-4.1-r1 (30 Dec 2002)

  10 Feb 2003; Guy Martin <gmsoft@gentoo.org> :
  Added hppa to keywords.

30 Dec 2002; Matthew Turk <satai@gentoo.org> : 
  changed to inherit sgml-catalog and better deal with catalogs. 

*docbook-sgml-dtd-4.0-r1 (30 Dec 2002)

  30 Dec 2002; Matthew Turk <satai@gentoo.org> : 
  changed to inherit sgml-catalog and better deal with catalogs. 

*docbook-sgml-dtd-3.1-r1 (30 Dec 2002)

  30 Dec 2002; Matthew Turk <satai@gentoo.org> : 
  changed to inherit sgml-catalog and better deal with catalogs. 

*docbook-sgml-dtd-3.0-r1 (30 Dec 2002)

  30 Dec 2002; Matthew Turk <satai@gentoo.org> :
  changed to inherit sgml-catalog and better deal with catalogs. 

  06 Dec 2002; Rodney Rees <manson@gentoo.org> : changed sparc ~sparc keywords
 
*docbook-sgml-dtd-4.0.ebuild (12 Sep 2002)

  12 Sep 2002; satai <satai@gentoo.org> docbook-sgml-dtd-4.0.ebuild :
  Added more robust file checking.

*docbook-sgml-dtd-4.1.ebuild (12 Sep 2002)

  12 Sep 2002; satai <satai@gentoo.org> docbook-sgml-dtd-4.1.ebuild :
  Added more robust file checking.

*docbook-sgml-dtd-3.0.ebuild (12 Sep 2002)

  12 Sep 2002; satai <satai@gentoo.org> docbook-sgml-dtd-3.0.ebuild :
  Added more robust file checking.

*docbook-sgml-dtd-3.1.ebuild (12 Sep 2002)

  15 Sep 2002; Owen Stampflee <owen@gentoo.org> :
  Fixed a typo.
