@@ -1,9 +1,9 @@
-MD5 dd7aafad34c4281d36fd8a378342895e ChangeLog 2923
-MD5 15587e82ba1be1f8339a1e755d3ace9e docbook-sgml-utils-0.6.11-r2.ebuild 1170
-MD5 b370d6b7b14dc8ccf54501a3dbd0f152 docbook-sgml-utils-0.6.12.ebuild 1181
-MD5 5d794ea316e35bb65972fbd5edc2dc43 docbook-sgml-utils-0.6.12-r1.ebuild 1335
+MD5 883aa046e05e18be7ad07241b9dbf465 ChangeLog 3024
 MD5 c472f5fd1646eb8bca71d8df5cb2bdcc metadata.xml 164
-MD5 1dd65666f8e59fae0cbcc281806b1195 files/digest-docbook-sgml-utils-0.6.11-r2 72
-MD5 162814a2342da5479a18dc8e9f74182a files/digest-docbook-sgml-utils-0.6.12 72
-MD5 a52142a3e1462a0e62a1d4b0e4b9e685 files/docbook-sgml-utils-frontend.patch 455
+MD5 15587e82ba1be1f8339a1e755d3ace9e docbook-sgml-utils-0.6.11-r2.ebuild 1170
+MD5 4ce8a07b319238d9d2944b4ab68cad61 docbook-sgml-utils-0.6.12.ebuild 1183
+MD5 5d794ea316e35bb65972fbd5edc2dc43 docbook-sgml-utils-0.6.12-r1.ebuild 1335
 MD5 162814a2342da5479a18dc8e9f74182a files/digest-docbook-sgml-utils-0.6.12-r1 72
+MD5 1dd65666f8e59fae0cbcc281806b1195 files/digest-docbook-sgml-utils-0.6.11-r2 72
+MD5 a52142a3e1462a0e62a1d4b0e4b9e685 files/docbook-sgml-utils-frontend.patch 455
+MD5 162814a2342da5479a18dc8e9f74182a files/digest-docbook-sgml-utils-0.6.12 72
