@@ -1,11 +1,11 @@
-MD5 d897321c2a2af624d893e0734617a479 ChangeLog 3299
+MD5 e2159b41b8cfbf96c45a9a979bfca85a ChangeLog 3408
 MD5 87d4c53ffe45ce0d990ec7b9dda46a0e docbook-xsl-stylesheets-1.52.2.ebuild 1864
 MD5 9d2aab6f558606c3030fc70717a53229 docbook-xsl-stylesheets-1.57.0.ebuild 2330
 MD5 4d3eeb1e6df8209ad07ff8af73c6a303 docbook-xsl-stylesheets-1.60.1.ebuild 2913
 MD5 0a9050588ad1c1c5dbf6a105e1cd15c2 docbook-xsl-stylesheets-1.62.0.ebuild 2976
 MD5 c472f5fd1646eb8bca71d8df5cb2bdcc metadata.xml 164
 MD5 17fe23ec2298900970290fd84c4a9b7d docbook-xsl-stylesheets-1.62.0-r1.ebuild 2926
-MD5 1fa598455dbdfab53aa002284b2a5e37 docbook-xsl-stylesheets-1.62.4.ebuild 2943
+MD5 b57d65a69c96594cbc8bf700411cb0b3 docbook-xsl-stylesheets-1.62.4.ebuild 2942
 MD5 777063c8d384cc237342da5c323402fd files/digest-docbook-xsl-stylesheets-1.52.2 71
 MD5 2ad8a396a7df7a2871e0396708bc4081 files/digest-docbook-xsl-stylesheets-1.57.0 71
 MD5 5ead9b5b3ff1c5c406d50fe4b9ebd5ee files/digest-docbook-xsl-stylesheets-1.60.1 71
