@@ -1,6 +1,6 @@
 # Copyright 1999-2003 Gentoo Technologies, Inc.
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /usr/local/ssd/gentoo-x86/output/app-text/cvs-repo/gentoo-x86/app-text/docbook-xsl-stylesheets/Attic/docbook-xsl-stylesheets-1.62.4.ebuild,v 1.4 2003/11/10 17:10:14 agriffis Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/app-text/cvs-repo/gentoo-x86/app-text/docbook-xsl-stylesheets/Attic/docbook-xsl-stylesheets-1.62.4.ebuild,v 1.5 2003/11/15 02:55:10 agriffis Exp $
 
 S=${WORKDIR}/docbook-xsl-${PV}
 DESCRIPTION="XSL Stylesheets for Docbook"
@@ -9,7 +9,7 @@ HOMEPAGE="http://www.oasis-open.org/docbook/"
 
 SLOT="0"
 LICENSE="as-is | BSD"
-KEYWORDS="~x86 ~ia64 ~ppc ~hppa ~amd64 ~sparc ~alpha"
+KEYWORDS="~x86 ia64 ~ppc ~hppa ~amd64 ~sparc ~alpha"
 IUSE=""
 
 DEPEND="dev-libs/libxml2"
