@@ -1,6 +1,10 @@
 # ChangeLog for app-text/docbook-sgml-utils
 # Copyright 2002-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/app-text/cvs-repo/gentoo-x86/app-text/docbook-sgml-utils/ChangeLog,v 1.17 2003/09/23 15:46:44 darkspecter Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/app-text/cvs-repo/gentoo-x86/app-text/docbook-sgml-utils/ChangeLog,v 1.18 2003/11/15 02:55:30 agriffis Exp $
+
+  14 Nov 2003; Aron Griffis <agriffis@gentoo.org>
+  docbook-sgml-utils-0.6.12.ebuild:
+  Stable on ia64
 
   23 Sep 2003; Bartosch Pixa <darkspecter@gentoo.org>
   docbook-sgml-utils-0.6.12.ebuild:
